# LoRA-MDM-Age-Dataset

./: .gitignore  .gitmodules  1_dataset_prep.py  2_fit_smpl_markers.py  2_fit_smpl_markers_moshpp.py  3_export_humanml3d.py  3_export_humanml3d_modified.py  4_motion_process.py  6_npz_motion_to_gif.py  AGENTS.md  CLAUDE.MD  DATA.MD  README.md  check_dimensions.py  debug.py  environment.yml  explore_c3d.py  explore_smpl_vertices.py  gait_analysis.py  inspect_file.py  plot_fitting_stats.py  plot_velocity_heatmap.py  render_smpl_mesh.py  render_smpl_mesh_live.py  simple_smpl.py  subjects.ipynb  view_smpl_params.py  visualize_markers_mesh.py
.claude/: settings.local.json
analysis/: README.md  classes.py  constants.py  data.py  gait_cycle.py  heatmap.py  main.py  results.py
chumpy/: ch.py
docs/: AMASS_Archive_Motion_Capture.md  FirstMonthSummary.md  HumanML3D.md  Known Bad Files.md  MarkerSetInfo.MD  MoShPP_Configuration.md  (+3 more)
stgcnpp/: README.md  batch_age_inference.py  batch_inference.py  dataset.py  environment.yml  extract_z_age.py  graph.py  import_from_smpl.py  inference.py  model.py  paint_gap.py  pyproject.toml  submit_inference.sh  submit_train_vc.sh  test_with_synthetic.py  train.py  train_vc.py  utils.py  visualize_gap.py  visualize_z_age.py
stgcnpp/docs/: Report.md  generate_report_figures.py
stgcnpp/docs/sessions/: Mar16-Session1-ExportFromSMPL.md  Mar17-Session2-ImprovedSplitRetraining.md  Mar17-Session3-AccuracyAnalysis.md
stgcnpp/logs/: 2026-03-17_age_classifier_training.md  Mar17-Session1-AgeClassifierTraining.md  Mar17-Session2-ImprovedSplitRetraining.md
stgcnpp/stgcnpp/: __init__.py  dataset.py  graph.py  model.py
(+37 files in other folders)
