[project]
name = "stgcnpp"
version = "0.1.0"
description = "Clean STGCN++ implementation — no OpenMMLab dependencies"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "opencv-python>=4.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["ipython", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
