[project]
name = "stgcnpp"
version = "0.1.0"
description = "Clean STGCN++ implementation — no OpenMMLab dependencies"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "opencv-python>=4.7",
    "tqdm>=4.65",
    "ipython>=8.38.0",
    "ipynb>=0.5.1",
]

[project.optional-dependencies]
dev = ["ipython", "matplotlib", "ipynb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
