[project]
name = "stgcnpp"
version = "0.1.0"
description = "Standalone ST-GCN++ implementation for NTU RGB+D skeleton action recognition"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.6",
    "numpy>=2.0",
    "scipy>=1.14",
    "tqdm>=4.0",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stgcnpp"]

[tool.uv]
dev-dependencies = []
